# informl

./: Introduction  README.md  informl.cabal  release.sh
Haskell/: Main.hs  Test.iml.js  informl.cabal
Haskell/Language/: Informl.hs
Haskell/Language/Informl/: AbstractSyntax.hs  Compilation.hs  Parse.hs
Haskell/Language/Informl/Compilation/: Haskell.hs  JavaScript.hs  PHP.hs  Python.hs
Haskell/Language/Informl/Stdlib/: Informl.php
Haskell/examples/: all-constructs.hs  all-constructs.js  all-constructs.php  all-constructs.py
JavaScript/: ImparseToInforml.js  Informl.js  imparse.js  interactions.js  interpreter.html  styles.css  uxadt.js  uxadt_old.js
PHP/: Informl.php
Python/: Informl.py
Tests/: Evaluate.html  Evaluate.js  Evaluate.php  Evaluate.py  ImparseToInforml.js  Informl.py  NodeTests.js  ReportExample.js  ReportExample.py  TestEval.py  TestReport.py  assignments.js  assignments.php  assignments.py  javascripttests.html  report.html  richreports.py  tree.html
